mlxtend bias-variance analysis using random forest

--- a/Bias-Variance-Decomposition.ipynb
+++ b/Bias-Variance-Decomposition.ipynb
@@ -286,6 +286,78 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b21d4f33-1763-42f6-92ea-9a3950c71fc4",
+   "metadata": {},
+   "source": [
+    "## using Mlxtend library getting down to bias variance decomposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "7e75f90f-cfc4-4e66-8ab0-e4413ebe167f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE        : 0.034\n",
+      "Bias^2     : 0.0143\n",
+      "Variance   : 0.0197\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mlxtend.evaluate import bias_variance_decomp\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create test/train data (same sin(x) function)\n",
+    "X, y = generate_data()\n",
+    "x_test = np.linspace(0, 2 * np.pi, 100).reshape(-1, 1)\n",
+    "y_test = true_func(x_test).ravel()\n",
+    "\n",
+    "# Evaluate bias/variance with mlxtend\n",
+    "model = RandomForestRegressor()\n",
+    "mse, bias_sq, var = bias_variance_decomp(\n",
+    "    model, X, y, x_test, y_test, \n",
+    "    loss='mse',\n",
+    "    num_rounds=100,\n",
+    "    random_seed=42\n",
+    ")\n",
+    "\n",
+    "print(f\"MSE        : {round(mse, 4)}\")\n",
+    "print(f\"Bias^2     : {round(bias_sq, 4)}\")\n",
+    "print(f\"Variance   : {round(var, 4)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b4591c1-4328-4fc0-a810-0db1c457620c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f676f5a4-e8c8-4cbe-a836-e37692139b06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "404c8b6b-0d6d-4ce1-89a6-fab674d8bc33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
